# IssueMind-AI

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  README.md  SETUP.md  alembic.ini  langgraph.json  pyproject.toml
.github/workflows/: cd.yml  ci.yml
aws_cdk_infra/: app.py  cdk.context.json  requirements.txt
aws_cdk_infra/aws_eks_rds/: eks_stack.py  rds_stack.py  vpc_stack.py
docker/: dev.Dockerfile  docker-compose.yml  prod.Dockerfile
kubernetes/: fastapi-deployment.yaml  fastapi-service.yaml  test-pod.yaml
migrations/: env.py
migrations/versions/: 77e4d0a13aa8_create_comments_and_issues_table.py
scripts/: lint-makefile.sh
src/agents/: agents.py  graph.py  graph_service.py
src/api/: main.py
src/config/: guardrails.yaml  repos.yaml
src/data_pipeline/: ingest_embeddings.py  ingestion_raw_data.py
src/database/: drop_tables.py  init_db.py  session.py
src/models/: agent_models.py  api_model.py  db_models.py  github_models.py  guardrails_models.py  repo_models.py
src/utils/: config.py  error_handler.py  guardrails.py  promps.py
src/vectorstore/: create_collection.py  create_index.py  delete_collection.py  payload_builder.py  qdrant_store.py  qdrant_store_sync.py
tests/integration/: test_api_process_issue.py  test_full_graph_output_guardrails.py  test_query_search.py
tests/unit/: test_db_ingest_qdrant.py  test_input_guardrail_agent.py  test_output_guardrail_agent.py  test_qdrant_collection.py
